AWS_App_Mesh/k8s/server-svc/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: server-svc
  labels:
    mesh: dev-demo-eks
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
