AWS_App_Mesh/k8s/server-svc/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: server-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: server-svc
